--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -43,10 +43,10 @@ jobs:
           echo "tag=${TAG}" >> $GITHUB_OUTPUT
           echo "Image tag: ${TAG} (env: ${ENV})"
 
-  # API 빌드 (병렬)
+  # API 빌드 (self-hosted ARM64)
   build-api:
     needs: prepare
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     permissions:
       contents: read
       packages: write
@@ -55,30 +55,14 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Set up QEMU (for ARM64)
-        uses: docker/setup-qemu-action@v3
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
       - name: Login to GHCR
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
       - name: Build and push API
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          file: ./apps/api/Dockerfile
-          platforms: linux/arm64
-          push: true
-          tags: |
-            ghcr.io/${{ needs.prepare.outputs.owner_lc }}/jaehyeong-tech-api:${{ needs.prepare.outputs.image_tag }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+        run: |
+          IMAGE="ghcr.io/${{ needs.prepare.outputs.owner_lc }}/jaehyeong-tech-api:${{ needs.prepare.outputs.image_tag }}"
+          docker build -t $IMAGE -f ./apps/api/Dockerfile .
+          docker push $IMAGE
 
       - name: Make package public
         continue-on-error: true
@@ -88,10 +72,14 @@ jobs:
           gh api -X PATCH /user/packages/container/jaehyeong-tech-api/visibility \
             -f visibility=public || true
 
-  # Web 빌드 (병렬)
+      - name: Cleanup
+        if: always()
+        run: docker image prune -f
+
+  # Web 빌드 (self-hosted ARM64)
   build-web:
     needs: prepare
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     permissions:
       contents: read
       packages: write
@@ -100,33 +88,17 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Set up QEMU (for ARM64)
-        uses: docker/setup-qemu-action@v3
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
       - name: Login to GHCR
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
       - name: Build and push Web
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          file: ./apps/web/Dockerfile
-          platforms: linux/arm64
-          push: true
-          tags: |
-            ghcr.io/${{ needs.prepare.outputs.owner_lc }}/jaehyeong-tech-web:${{ needs.prepare.outputs.image_tag }}
-          build-args: |
-            VITE_API_URL=/api
-            VITE_GOOGLE_CLIENT_ID=${{ secrets.VITE_GOOGLE_CLIENT_ID }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+        run: |
+          IMAGE="ghcr.io/${{ needs.prepare.outputs.owner_lc }}/jaehyeong-tech-web:${{ needs.prepare.outputs.image_tag }}"
+          docker build -t $IMAGE \
+            --build-arg VITE_API_URL=/api \
+            --build-arg VITE_GOOGLE_CLIENT_ID=${{ secrets.VITE_GOOGLE_CLIENT_ID }} \
+            -f ./apps/web/Dockerfile .
+          docker push $IMAGE
 
       - name: Make package public
         continue-on-error: true
@@ -135,6 +107,10 @@ jobs:
         run: |
           gh api -X PATCH /user/packages/container/jaehyeong-tech-web/visibility \
             -f visibility=public || true
+
+      - name: Cleanup
+        if: always()
+        run: docker image prune -f
 
   # GitOps 업데이트 (두 빌드 모두 성공 시)
   update-gitops:
